2025-06-20_generali_openshift/lab0/example/backend_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"StatefulSet","name":"redis"}]'
spec:
  revisionHistoryLimit: 0
  replicas: 4
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/ondrejsika/counter
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 50m
              memory: 50Mi
            limits:
              cpu: 100m
              memory: 100Mi
          startupProbe:
            httpGet:
              path: /livez
              port: 8000
          livenessProbe:
            httpGet:
              path: /livez
              port: 8000
