2025-06-20_generali_openshift/lab0/example/frontend_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"backend"}]'
spec:
  revisionHistoryLimit: 0
  replicas: 4
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/ondrejsika/counter-frontend
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
            limits:
              cpu: 500m
              memory: 500Mi
          startupProbe:
            httpGet:
              path: /api/livez
              port: 3000
          livenessProbe:
            httpGet:
              path: /api/livez
              port: 3000
