2025-06-20_generali_openshift/lab0/example/frontend_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: openshift-default
  tls:
    - secretName: frontend.openshift.sikademo.com-tls
      hosts:
        - frontend.openshift.sikademo.com
  rules:
    - host: frontend.openshift.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
